# qa_agentic_rag

./: .env.example  .example.env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  mcp_agent_sql.py  pyproject.toml
agent/: Dockerfile  main.py
agent/src/: logger.py  models.py  pydantic_ai_agent.py  self_written_agent.py  smolagent_agent.py  utils.py
cv_generator/: Dockerfile  main.py
cv_generator/config/: config.py  cv_template.tex
cv_generator/src/: logger.py  models.py  utils.py
db/: Dockerfile  init.sql  load_initial_data.py
front/: Dockerfile  streamlit_app.py
front/src/: components.py
notebooks/: cv_generation.ipynb  cv_parsing.ipynb  db_data_insert.ipynb  resume_generation.ipynb  resume_parsing_experiments.ipynb  smolagent.ipynb  smollagent.ipynb  sql_agent_exp_0.ipynb  sql_agent_exp_1.ipynb  sql_agent_exp_bare_python.ipynb  text_to_sql_evaluation.ipynb  text_to_sql_evaluation_gpt.ipynb  text_to_sql_evaluation_results.ipynb
resume_generator/: Dockerfile  main.py
resume_generator/config/: config.py
resume_generator/src/: logger.py  models.py  utils.py
resume_parser/: Dockerfile  main.py
resume_parser/config/: config.py  resume_parser_prompt.txt
resume_parser/src/: logger.py  models.py  resume_parser.py  utils.py
src/cv_generator/: Dockerfile  main.py  models.py  utils.py
src/cv_generator/config/: config.py  cv_generator_prompt.txt  logger.py
streamlit/: Dockerfile  streamlit_app.py
streamlit/src/: components.py  models.py
streamlit/tabs/: qa_bot_page.py  resume_manager_page.py
